--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -695,7 +695,7 @@ padding-left:30px;
 
 .content_constitution{
   width:100%;
-  height:1600px;
+  height:2100px;
   background: #FFFFFF;
 border: 18px solid #C9E265;
 border-radius: 2px;
@@ -704,15 +704,19 @@ display:flex;
 justify-content:center;
 }
 
+.constitution_title{
+margin-bottom:50px;
+}
+
 .content_constitution h1{
   color:#C9E265;
-  font-size:60px;
-  margin-top:30px;
-  margin-bottom:30px;
+  font-size:50px;
+  margin-top:10px;
+  margin-bottom:10px;
 }
 .constitution_suii_frame{
   width:1000px;
-  height:300px;
+  height:350px;
   background: #FFFFFF;
   margin-bottom:80px;
   border: 5px solid #C9E265;
@@ -755,7 +759,7 @@ justify-content:center;
 
 .constitution_shokusyu_frame{
   width:1000px;
-  height:400px;
+  height:450px;
   margin-bottom:50px;
   border: 5px solid #C9E265;
 
@@ -1314,7 +1318,7 @@ align-items:center;
 
 .content_recruit_detail{
   width:100%;
-  height:1600px;
+  height:auto;
   background: #FFFFFF;
   border: 18px solid #C9E265;
   border-radius: 2px;
@@ -1331,7 +1335,7 @@ align-items:center;
 .recruit_detail_title{
   font-size:13px;
   width:100%;
-  height:180px;
+  height:auto;
   
   display:flex;
   align-items:center;
@@ -1339,29 +1343,42 @@ align-items:center;
   background:#FFFFFF;
   padding-left:2.5%;
   padding-right:2.5%;
+  margin-top:20px;
+  margin-bottom:20px;
  
 }
 
 
-.detail_content_wrapper{
+/* .detail_content_wrapper{
   height:1200px;
   width:95%;
   margin-left:2.5%;
-}
+} */
 
-.detail_content{
-  height:150px;
+ .detail_content{
+  height:auto;
   display:flex;
   flex-direction:column;
   justify-content:center;
+  padding:10px;
 }
 .detail_content p{
-  padding:10px;
+  padding-left:10px;
   font-size:13px;
+  line-height:23px;
+} 
+
+.detail_content h5{
+  line-height:23px;
+  padding-left:10px;}
+
+.detail_content ul{
+  list-style:none;
+  padding-left:0;
 }
 
-.detail_content_title{
-  height:50px;
+ .detail_content_title{
+  height:auto;
   background:#ddd;
   width:100%;
 
@@ -1370,12 +1387,16 @@ align-items:center;
 
   color:#FFFFFF;
   padding-left:10px;
-}
+  margin-bottom:15px;
+  
+} 
 
 .oubo_button_wrapper{
   display:flex;
+  width:100%;
+  height:150px;
+  align-items:center;
   justify-content:center;
-  margin-top:100px;
 }
 
 
