--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,39 +1,119 @@
+@font-face{
+  font-family:'Glacial';
+  src:url('/fonts/GlacialIndifference-Regular.otf');
+  font-family:'Glacial-bold';
+  src:url('/fonts/GlacialIndifference-Bold.otf');
+}
+
+
 .header{
   width:100%;
-  height:78px;
-  background:#C9E265;
+
+  //background:#C9E265;
+  display: flex;
+  align-items:center;
+  justify-content:space-between;
+}
+
+.second_header{
+  width:100%;
+  background-image: linear-gradient(to right, #C9E265, #4F9DFF);
   display: flex;
   align-items:center;
 }
 
 .single_menu_bar ul{
-  max-width:70%;
+  //background:rgb(255,255,255,0.6);
+  width:100%;
   height:auto;
   display:flex;
   margin-left:120px; 
+  //box-shadow:0 0 5px rgba(0,0,0,0.3);
+  //border-top-left-radius:30px;
+  //border-bottom-left-radius:30px;
+  padding-left:30px;
+  padding-top:10px;
+  padding-bottom:10px;
+  overflow-x:scroll;
+  align-items:center;
 }
 
 .single_menu_tab{
-  width:150px;
+  width:100%;
+  min-width:140px;
+  padding-left:20px;
+  padding-right:20px;
   height:auto;
-  background:#C9E265;
-  color:#FFFFFF;
+  //background:#C9E265;
+  //color:white;
   display:flex;
   align-items:flex-end;
-  font-weight:700;
-
+  font-weight:300;
+  font-family: 'Zen Maru Gothic', sans-serif;
 }
 
 .top_image_frame{
-  background-image:url("/images/top_job_image.jpg");
+  background-image:url("/images/top_6.png");
   background-size:cover;
   background-repeat:no-repeat;
-  height: auto;
+  background-position:center center;
   width:100%;
-  min-height:700px;
-  overflow:hidden;
+   height:900px;
+
   display:flex;
-  
+  flex-direction:column;
+  justify-content:space-between;
+  padding-bottom:20px;
+}
+
+.main1{
+  background-image:url("/images/man.png");
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-position:center center;
+  max-width:2000px;
+   height:850px;
+
+  display:flex;
+  padding:20px;
+}
+
+.main_left{
+  width:50%;
+  display:flex;
+  align-items:flex-end;
+  padding-bottom:300px;
+  justify-content:center;
+  font-family:'Zen Maru Gothic', sans-serif;
+}
+.main_right{
+  width:50%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  padding-left:130px;
+  padding-bottom:100px;
+}
+
+
+.job_page_button{
+  width:320px;
+  height:300px;
+  border-radius:30px;
+  border: none 0px;
+  font-size:30px;
+  font-family:'Zen Maru Gothic';
+}
+
+.main2{
+  background-image:url("/images/woman.png");
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-position:center center;
+  width:100%;
+  height:850px;
+  display:flex;
+
 }
 
 .top_title_frame{
@@ -68,7 +148,7 @@ padding-right:20px;
 padding-left:20px;
 }
 
-@media (max-width:600px){
+/* @media (max-width:600px){
   .top_title{
     font-size:25px;
     width:100%;
@@ -79,25 +159,11 @@ padding-left:20px;
   .top_image_frame{
     height:600px;
 }
-}
+} */
 
 
 
-.top_discription{
-  height:200px;
-  width:100%;
 
-  font-family: 'Hiragino Mincho Pro';
-  color:#FFF;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  line-height:23px;
-
-  background:rgba(0,0, 0, 0.7);
-  margin-bottom:50px;
- }
 
 
 
@@ -106,7 +172,8 @@ padding-left:20px;
   max-width:100%;
   height:auto;
   display:flex;
-  background:#C9E265;
+  //background:white;
+  //background-image: linear-gradient(to right, #C9E265, #4F9DFF);
   justify-content:center;
   align-items:center;
   flex-wrap:wrap;
@@ -117,7 +184,7 @@ padding-left:20px;
 }
 
 .menu_bar ul{
-  width:1150px;
+  width:100%;
   display:flex;
   margin-left:6px;
   margin-right:6px;
@@ -130,8 +197,10 @@ padding-left:20px;
   width:200px;
   height:45px;
   color:#FFFFFF;
-  background:#C9E265;
+  //background:#C9E265;
   border:3px solid #FFFFFF;
+  border-radius:5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   display:flex;
   justify-content:space-around;
   align-items:center;
@@ -142,12 +211,56 @@ padding-left:20px;
 }
 
 
+/* @media (max-width:600px){
+
+  .top_image_frame{
+    background-image:url("/images/phone600.png");
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-position:center center;
+    width:100%;
+    height:auto;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    padding-bottom:20px;
+  }
+
+  .menu_tab{
+    width:100%;
+    height:40px;
+    color:#FFFFFF;
+    font-size:14px;
+    //background:#C9E265;
+    border:3px solid #FFFFFF;
+    border-radius:5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    font-weight:700;
+    margin-top:10px;
+    margin-left:15px;
+    margin-right:15px;}
+
+    .menu_bar ul{
+      width:100%;
+      height:auto;
+      display:flex;
+      margin-left:6px;
+      margin-right:6px;
+      justify-content:center;
+    }
+
+} */
+
+
 .content_main_frame{
   width:100%;
   height:1900px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
-  border-radius: 2px;
+  //border: 18px solid rgb(0,0,0,0.3) ;
+
 
   display:flex;
   flex-direction:column;
@@ -196,11 +309,13 @@ padding-left:20px;
   flex-direction:column;
  }
 
+ /*SNS(Twitter)*/
+
  .twitter_frame{
   width:100%;
   height:980px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid #C9E265;
   border-radius: 2px;
 
   display:flex;
@@ -396,26 +511,96 @@ padding-left:20px;
 
 .people_title{
   width:100%;
-  height:140px;
-  padding:20px 20px 0px 40px;
+  height:180px;
+  background:#FFF;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 .people_title h1{
-  color:#C9E265;
-  font-size:55px;
+     background-image: linear-gradient(to right, #C9E265, #4F9DFF);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size:70px;
+}
+
+.people_frame_wrapper{
+  width:100%;
+  display:flex;
+  overflow-x:scroll;
+  background:#FFF;
+  align-items:center;
+ 
+
 }
 
 
 .people_frame{
-  width:100%;
-  height:2600px;
-  background: #FFFFFF;
-  border: 18px solid #C9E265;
-  border-radius: 2px;
+  width:550px;
+  height:1300px;
+  margin:20px;
+  border: 5px solid #FFF;
+  background-image: linear-gradient(#C9E265, #4F9DFF);
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  padding:10px;
+
 
   display:flex;
-  flex-direction:column;
   align-items:center;
+  flex-direction:column;
+
+  padding-top:50px;
 }
+
+.staff_frame{
+  width:550px;
+  height:1100px;
+  margin:20px;
+  border: 5px solid #FFF;
+  background-image: linear-gradient(#C9E265, #4F9DFF);
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  padding:10px;
+
+  display:flex;
+  align-items:center;
+  flex-direction:column;
+
+  padding-top:50px;
+}
+
+.people_frame_left{
+   width:400px;
+  height:380px;
+  border-radius:10px;
+  background:#FFF;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.people_frame_right{
+  width:90%;
+ height:400px;
+ 
+ display:flex;
+ flex-direction:column;
+ margin-top:30px;
+ 
+}
+.people_frame_right p{
+  line-height:30px;
+}
+
+
+.people_frame_right h2{
+  font-size:40px;
+  color:#FFF;
+}
+
 
 .content_people h3{
  margin-left:75px;
@@ -425,31 +610,44 @@ padding-left:20px;
 
 .people_sub_title h3{
   align-self:flex-start;
-  color:#FFFFFF;
   padding-left:50px;
+  font-size:40px;
+  color:#FFF;
 }
 
 .people_sub_title{
-  width:1050px;
-  height:30px;
-  background:#C9E265;
+  width:100%;
+  height:45px;
+  //background:#FFF;
   margin-bottom:50px;
+
 }
 
  .people_frame hr{
-  width:545px;
+  width:90%;
   height:0px;
-  border: 0.5px solid #ddd;
+  border: 0.5px solid #FFF;
+  margin-top:10px;
+  margin-bottom:15px;
+}
+
+.staff_frame hr{
+  width:90%;
+  height:0px;
+  border: 0.5px solid #FFF;
   margin-top:10px;
   margin-bottom:15px;
 }
 
 
 .people{
-  width:95%;
-  height:400px;
+  min-width:870px;
+  height:auto;
+  padding:20px;
   background:#FFFFFF;
-  border: 5px solid #C9E265;
+  //border: 5px solid #ddd;
+  border-radius:5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   display:flex;
   align-items:center;
   margin-top:10px;
@@ -467,17 +665,22 @@ padding-left:20px;
   
 }
 .people_right{
-  width:550px;
+  width:100%;
+  height:auto;
+  display:flex;
+  flex-direction:column;
 }
 
 .people_right p{
- line-height:25px;
+ line-height:30px;
  font-size:13px;
 }
 .people_right h2{
-  font-size:20px;
+  font-size:40px;
   margin-bottom:15px;
 };
+
+
 
 /*他の派遣会社との違い*/
 
@@ -593,24 +796,14 @@ padding-left:30px;
 
 
 
-  .content_constitution_main_top{
-    width:100%;
-    height:279px;
-    background-image:url(/Vectorcontent_top_image.svg);
-    display:flex;
-    align-items:center;
-    padding-left:80px;
-    font-size:30px;
-    }
 
 
 
 
 .content_chargeup{
   width:100%;
-  height:2600px;
+  height:auto;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
   border-radius: 2px;
 
   display:flex;
@@ -695,40 +888,43 @@ padding-left:30px;
 
 .content_constitution{
   width:100%;
-  height:2100px;
+  height:auto;
   background: #FFFFFF;
-border: 18px solid #C9E265;
-border-radius: 2px;
+//border: 18px solid #C9E265;
 
-display:flex;
-justify-content:center;
+
+
+
+
 }
 
-.constitution_title{
+.content_constitution_title{
 margin-bottom:50px;
 }
 
 .content_constitution h1{
   color:#C9E265;
   font-size:50px;
-  margin-top:10px;
+  //margin-top:10px;
   margin-bottom:10px;
+  
 }
 .constitution_suii_frame{
-  width:1000px;
-  height:350px;
+  width:90%;
+  height:auto;
+  padding:20px;
   background: #FFFFFF;
   margin-bottom:80px;
   border: 5px solid #C9E265;
 
   display:flex;
-  justify-content:center;
+  justify-content:space-around;
   align-items:center;
 }
 
 .constition_suii_right{
-  width:400px;
-  margin-left:10px;
+  width:40%;
+  height:auto;
 }
 
 .constition_suii_right p{
@@ -736,7 +932,7 @@ margin-bottom:50px;
   font-size:15px;
 }
 
-.constitution_sedai_frame{
+/* .constitution_sedai_frame{
   width:1000px;
   height:400px;
   margin-bottom:80px;
@@ -776,13 +972,13 @@ margin-bottom:50px;
 .constition_shokusyu_right p{
   padding-top:20px;
   font-size:15px;
-}
+} */
 
 .content_flow{
   width:100%;
   height:2800px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid #C9E265;
   border-radius: 2px;
 
 display:flex;
@@ -842,13 +1038,25 @@ align-items:center;
   width:100%;
   height:750px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid rgb(0,0,0,0.1);
   border-radius: 2px;
 
 }
 
 .gaiyou_title{
-  padding:20px;
+  width:1000px;
+  height:120px;
+
+  padding-left:65px;
+
+  display:flex;
+  align-items:center;
+  
+}
+
+.gaiyou_title h1{
+  //color:#C9E265;
+  font-size:50px;
 }
 
 .gaiyou_table{
@@ -874,7 +1082,7 @@ align-items:center;
   width:100%;
   height:1500px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+
   border-radius: 2px;
 
   display:flex;
@@ -930,7 +1138,7 @@ align-items:center;
 
 
 
-
+/*社内制度*/
 
 .system_frame{
   width:100%;
@@ -961,10 +1169,11 @@ align-items:center;
   font-size:50px;
 }
 
+
 .system{
  
-  width:850px;
-  height:350px;
+  width:100%;
+  height:auto;
   border:8px solid  #C9E265;
 
   padding:20px;
@@ -1000,7 +1209,7 @@ align-items:center;
   width:100%;
   height:1400px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid rgb(0,0,0,0.1);
   border-radius: 2px;
 
   display:flex;
@@ -1021,14 +1230,14 @@ align-items:center;
 }
 
 .rinen_title h1{
-  color:#C9E265;
+  //color:#C9E265;
   font-size:50px;
 }
 
 .rinen{
   width:900px;
   height:370px;
-  border:8px solid  #C9E265;
+  border:8px solid #C9E265;
 
   padding:20px;
 
@@ -1060,7 +1269,7 @@ align-items:center;
   width:100%;
   height:1200px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid rgb(0,0,0,0.1);
   border-radius: 2px;
 
   display:flex;
@@ -1081,14 +1290,14 @@ align-items:center;
 }
 
 .panflet_title h1{
-  color:#C9E265;
+  //color:#C9E265;
   font-size:50px;
 }
 
 .panflet{
   width:900px;
   height:500px;
-  border:8px solid  #C9E265;
+  border:8px solid #C9E265;
 
   padding:20px;
 
@@ -1129,7 +1338,7 @@ align-items:center;
   width:100%;
   height:3800px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid #C9E265;
   border-radius: 2px;
 
   display:flex;
@@ -1148,7 +1357,7 @@ align-items:center;
 }
 
 .range_title h1{
-  color:#C9E265;
+  //color:#C9E265;
   font-size:50px;
   margin-top:20px;
   margin-bottom:20px;
@@ -1184,24 +1393,27 @@ align-items:center;
 
 .content_recruit{
   width:100%;
-  height:2000px;
+  height:auto;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid #ddd;
   border-radius: 2px;
 
   display:flex;
   flex-direction:column;
   align-items:center;
+
+  padding-bottom:50px;
 }
 
 .recruit_title{
   height:100px;
   width:100%;
   margin-top:30px;
-  color:#C9E265;
-  font-size:23px;
+  //color:#C9E265;
+  font-size:25px;
   margin-top:20px;
-  padding-left:30px;
+  display:flex;
+  justify-content:center;
 }
 
 .recruit_search_frame{
@@ -1214,6 +1426,7 @@ align-items:center;
   align-items:center;
 
   border:5px solid #C9E265;
+  border-radius:2px;
 
   margin-top:20px;
   padding:10px 10px 20px 10px;
@@ -1250,6 +1463,10 @@ align-items:center;
   background:#C9E265;
   border:0px none;
   border-radius:5px;
+  color:#FFF;
+  font-size:20px;
+  font-weight:700;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -1284,7 +1501,8 @@ align-items:center;
 .recruit_mid_items{
   width:600px;
   height:270px;
-  border:5px solid #C9E265;
+  border:5px solid#C9E265;
+  border-radius:2px;
   margin-top:10px;
   margin-bottom:10px;
   padding:20px;
@@ -1320,7 +1538,7 @@ align-items:center;
   width:100%;
   height:auto;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid #C9E265;
   border-radius: 2px;
 
   display:flex;
@@ -1421,7 +1639,7 @@ align-items:center;
   width:100%;
   height:900px;
   background: #FFFFFF;
-  border: 18px solid #C9E265;
+  //border: 18px solid #C9E265;
   border-radius: 2px;
 
   display:flex;
@@ -1491,9 +1709,10 @@ align-items:center;
 
 .content_oubo{
   width:100%;
-  height:3200px;
-  background: #FFFFFF;
-  border: 18px solid #C9E265;
+  height:auto;
+  background:#FFF;
+  //background-image: linear-gradient(to right, #C9E265, #4F9DFF);
+  //border: 18px solid #C9E265;
   border-radius: 2px;
 
   display:flex;
@@ -1505,7 +1724,7 @@ align-items:center;
 .oubo_top_bar{
   width:100%;
   height:60px;
-  background:#C9E265;
+  background:#ddd;
 
   color:#FFFFFF;
   font-weight:700;
@@ -1517,11 +1736,12 @@ align-items:center;
 
 .oubo_form{
   margin-top:30px;
-  width:850px;
-  border:5px solid #C9E265;
+  width:100%;
+  border:5px solid #FFF;
   padding:30px;
-  background: rgba(201, 226, 101, 0.3);
-
+  background:rgb(255,255,255,0.3);
+  border-radius:10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   display:flex;
   justify-content:center;
 }
@@ -1539,7 +1759,7 @@ align-items:center;
   width:250px;
   height:45px;
   border-radius:10px;
-  border:1px solid #C9E265;
+  border:1px solid #FFF;
   margin:10px;
 }
 
@@ -1601,6 +1821,93 @@ align-items:center;
   border-radius:25px;
 
 }
+
+.thanks{
+  width:100%;
+  height:500px;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
+
+.thanks p{
+  margin-top:30px;
+  margin-bottom:50px;
+}
+
+.content_confirm{
+  width:100%;
+  height:auto;
+  background:#FFF;
+  //background-image: linear-gradient(to right, #C9E265, #4F9DFF);
+  //border: 18px solid #C9E265;
+  border-radius: 2px;
+
+  display:flex;
+  //justify-content:center;
+  flex-direction:column;
+  align-items:center;
+
+  padding-top:20px;
+  padding-bottom:50px;
+}
+
+.oubo_confirm_bar{
+  width:95%;
+  height:40px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-weight:700;
+  background:rgba(0,0,0,0.1);
+  color:#FFF;
+  margin-top:20px;
+
+}
+
+.content_confirm h4{
+ width:200px;
+}
+
+.oubo_item{
+  margin-top:20px;
+  display:flex;
+
+}
+.oubo_data{
+  padding-left:50px;
+}
+
+.oubo_data_wrapper{
+  margin-top:30px;
+  margin-bottom:50px;
+  padding-bottom:60px;
+}
+
+.fix_button{
+
+  width:270px;
+  height:55px;
+  background:#ddd;
+  border:0px none;
+  border-radius:10px;
+  font-size:15px;
+  
+  display:flex;
+  justify-content:center;
+  align-items:center;
+
+
+}
+
+.button_area{
+  width:90%;
+  display:flex;
+  justify-content:space-around;
+}
+
+
 
 
 
