--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -23,6 +23,7 @@
     color: rgba(0, 0, 0, 0.6);
     margin-bottom:20px;
     margin-left:5px;
+    font-family: "Zen Maru Gothic", sans-serif;
   }
 
   .top_image_frame {
@@ -31,16 +32,19 @@
     background-repeat: no-repeat;
     background-position: center center;
     width: 100%;
-    height: 700px;
+    height: 800px;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items:center;
     padding-bottom: 20px;
+
+    position:relative;
   }
 
   .menu_bar {
-    max-width: 100%;
+    width: 80%;
     height: auto;
     display: flex;
     //background:white;
@@ -49,15 +53,20 @@
     align-items: center;
     flex-wrap: wrap;
     padding-top: 10px;
+    
     padding-bottom: 10px;
     margin-bottom: 20px;
-
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+    border-radius:5px;
     overflow: auto;
+    position:absolute;
+    top:530px;
+
   }
 
   .menu_bar ul {
     width: 100%;
-    height: 220px;
+    height: 200px;
     display: flex;
     margin-left: 6px;
     margin-right: 6px;
@@ -68,20 +77,21 @@
   }
 
   .menu_tab {
-    width: 130px;
-    height: 90px;
+    width: 100%;
+    height: 70px;
     color: #ffffff;
     //background:#C9E265;
     border: 3px solid #ffffff;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     display: flex;
-    justify-content: space-around;
+    justify-content:none;
     align-items: center;
     font-weight: 700;
-    margin-bottom: 20px;
+    font-family:"Hiragino Kaku Gothic ProN";
+    margin-bottom: 10px;
 
-    font-size: 12px;
+    font-size: 13px;
   }
 
   .main1 {
@@ -1310,6 +1320,7 @@
     justify-content: center;
     align-items: center;
     padding: 30px;
+    font-size:15px;
   }
 
   .thanks p {
@@ -1408,12 +1419,29 @@
     align-items: center;
   }
 
+  .content_contact{
+    width: 100%;
+    height: auto;
+    background: #ffffff;
+    //border: 18px solid #C9E265;
+    border-radius: 2px;
+    //font-family: "Zen Maru Gothic", sans-serif;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
+
+
   .inquiry_title {
     width: 100%;
     padding: 30px;
 
     display: flex;
     justify-content: center;
+    align-items:center;
     margin-bottom: 0px;
   }
 
@@ -1422,6 +1450,23 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 40px;
+    margin-bottom:20px;
+  }
+
+  .contact_title {
+    width: 100%;
+    padding: 30px;
+
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
+    margin-bottom: 0px;
+  }
+
+  .contact_title h1 {
+    font-size: 40px;
+    margin-bottom:20px;
   }
 
   .inquiry_form {
@@ -1434,7 +1479,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 
     border: 3px solid #ffffff;
     border-radius: 5px;
@@ -1680,7 +1725,6 @@
   height:auto;
   border-image: linear-gradient(to right, #0cc0df -20%, #ffde59 150%);
   border-image-slice: 1;
-  background-image:;
   padding:20px;
 
   margin-bottom:30px;
@@ -1689,27 +1733,73 @@
   line-height:30px;
 
   display:flex;
+  flex-direction:column;
+  align-items:center;
  }
 .range h1{
-  margin-top:0px;
-  margin-bottom:20px;
-  margin-left:20px;
-  margin-right:60px;
+  margin-top:30px;
+  margin-bottom:50px;
+  margin-left:0px;
+  margin-right:0px;
 
 
   font-family: 'Hiragino Mincho Pro';
-  writing-mode: vertical-rl; /* 縦書きにする */
-  text-orientation: upright;
-  font-size:35px;}
+   font-size:28px;
+  }
 
  .range_discription{
 
-  width:70%;
+  width:100%;
   display:flex;
   flex-direction:column;
   padding-left:0px;
  
 }
+
+
+/*会社概要*/
+.content_gaiyou{
+  width:100%;
+  height:auto;
+  background: #FFFFFF;
+  //border: 18px solid rgb(0,0,0,0.1);
+  border-radius: 2px;
+
+}
+
+.gaiyou_title{
+  width:100%;
+  height:auto;
+  padding-left:0px;
+  padding-top:30px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  
+}
+
+.gaiyou_title h1{
+  //color:#C9E265;
+  font-size:40px;
+}
+
+.gaiyou_table{
+  margin:30px;
+  width:600x;
+  border:0.5px solid;
+  border-collapse: collapse;
+}
+.gaiyou_th{
+  border:solid 0.5px;
+  padding:15px;
+  width:120px;
+}
+
+.gaiyou_td{
+  border:solid 0.5px;
+  padding:15px;
+}
+
 
 
 }
