--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -431,6 +431,7 @@ padding-left:20px;
   background:black;
   max-width:100%;
   height:auto;
+  font-family:"Hiragino Kaku Gothic ProN";
  }
 
  .footer_top{
