🎨 スマホUI（SNS,BLOG）

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -432,6 +432,7 @@ padding-left:20px;
   max-width:100%;
   height:auto;
   font-family:"Hiragino Kaku Gothic ProN";
+  margin-top:auto;
  }
 
  .footer_top{
