--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -382,7 +382,7 @@
 
   .content_chargeup {
     width: 100%;
-    height: auto;
+    min-height: 100vh;
     background: #ffffff;
     border: 0px none;
     border-radius: 2px;
@@ -882,7 +882,7 @@
 
   .twitter {
     width: 100%;
-    height: 450px;
+    height: auto;
     padding: 0px 10px 10px 10px;
 
     background: #ffffff;
@@ -904,33 +904,41 @@
     display: flex;
     align-items: center;
     margin-left: -30px;
-    margin-top: 20px;
-    margin-bottom: 30px;
+    margin-top: 40px;
+    margin-bottom: 20px;
   }
 
   .twitter_content {
-    width: 90%;
-    height: 500px;
-    border: 5px solid #c9e265;
+    width: 95%;
+    height: auto;
+    border: 5px solid #ddd;
     border-radius: 10px;
     padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: scroll;
+    //overflow: none;
     margin-left: 20px;
   }
 
   .twitter_tags {
-    width: 100%;
+    width: 95%;
     padding-left: -30px;
     padding: 10px;
     margin-bottom: 20px;
+
+    display:flex;
+    flex-direction:column-reverse;
   }
 
   .twitter_tags p {
     font-size: 13px;
+    margin-bottom:20px;
+  }
+
+  .twitter_tags h5 {
+   padding-left:20px;
   }
 
   /*採用情報検索ページ*/
@@ -1809,6 +1817,17 @@
 .gaiyou_td{
   border:solid 0.5px;
   padding:15px;
+}
+
+/**/
+.blog_frame{
+  width:100%;
+  min-height:100vh;
+  background:#FFF;
+
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
 
