--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 900px) {
   .header {
     width: 100%;
 
@@ -639,12 +639,13 @@
   .constitution_graph {
     width: 100%;
     height: auto;
+
   }
 
   .constition_suii_right {
     width: 40%;
     height: auto;
-  }
+    }
 
   .constition_suii_right p {
     padding-top: 20px;
@@ -684,7 +685,9 @@
   .step_frame {
     width: 90%;
     height: auto;
-    border: 5px solid #c9e265;
+    border: 5px solid #0cc0df;
+    border-image: linear-gradient(#ffde59 -70%, #0cc0df 130%);
+    border-image-slice: 1;
 
     padding: 20px;
   }
@@ -737,8 +740,9 @@
     flex-direction: column;
     justify-contetn: center;
     align-items: center;
-    padding: 10px 10px 10px 50px;
-    font-size: 13px;
+    //padding: 40px 10px 10px 10px;
+    margin-bottom:0px;
+    font-size: 15px;
   }
 
   .Line_title_left {
@@ -749,7 +753,7 @@
   }
 
   .line_icon {
-    margin-top: 20px;
+
     width: 60%;
   }
 
@@ -758,13 +762,14 @@
     background-image: linear-gradient(to right, #0cc0df, #ffde59);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-bottom: 20px;
+
   }
 
   .Internal_Line_merit {
     width: 90%;
     height: auto;
-    border: 8px solid #c9e265;
+    border:0px solid #FFF;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 
     padding: 20px;
     margin-top: 30px;
@@ -793,7 +798,6 @@
     width: 100%;
     height: auto;
     background: #ffffff;
-    border: 0px solid #0cc0df;
     border-radius: 2px;
 
     display: flex;
@@ -877,6 +881,7 @@
     flex-direction: column;
     align-items: center;
 
+
     font-family: "Zen Maru Gothic", sans-serif;
   }
 
@@ -889,24 +894,24 @@
     border-radius: 10px;
     display: flex;
     justify-content: center;
-    flex-direction: column-reverse;
-
-    margin-bottom: 50px;
+        margin-bottom: 50px;
   }
 
   .twitter_title {
     height: auto;
-    width: 100%;
+    width: 95%;
     font-size: 21px;
-    background-image: linear-gradient(to right, #0cc0df, #ffde59);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  
     display: flex;
     align-items: center;
-    margin-left: -30px;
-    margin-top: 40px;
+    //margin-left: -30px;
+    margin-top: 0px;
     margin-bottom: 20px;
   }
+
+  .twitter_title h1{  background-image: linear-gradient(to right, #0cc0df, #ffde59);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;}
 
   .twitter_content {
     width: 95%;
@@ -922,15 +927,7 @@
     margin-left: 20px;
   }
 
-  .twitter_tags {
-    width: 95%;
-    padding-left: -30px;
-    padding: 10px;
-    margin-bottom: 20px;
-
-    display:flex;
-    flex-direction:column-reverse;
-  }
+ 
 
   .twitter_tags p {
     font-size: 13px;
@@ -1819,7 +1816,7 @@
   padding:15px;
 }
 
-/**/
+/*blog*/
 .blog_frame{
   width:100%;
   min-height:100vh;
