--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -251,20 +251,29 @@
   font-family: "Zen Maru Gothic", sans-serif;
 }
 
+
 .content_main_title {
   width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  padding-left: 5%;
-  font-size: 18px;
-  margin-top: 80px;
-  margin-bottom: 60px;
+  height: 200px;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  //color: #C9E265;
+  font-size: 25px;
+
+  padding-left: 60px;
 }
+
+.content_main_title h1 {
+  background-image: linear-gradient(to right, #0cc0df, #ffde59);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+
+
+
 .hajime_content {
   display: flex;
   justify-content: space-around;
@@ -321,36 +330,33 @@
   justify-content: center;
 }
 
-.twitter_title {
-  height: auto;
-  width: 65%;
-  font-size: 21px;
- 
-  display: flex;
-  flex-direction:column;
-  padding-top:30px;
-  padding-bottom:20px;
 
+.twitter_title  {
+  width: 100%;
+  height: 220px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 25px;
+  font-family: "Zen Maru Gothic", sans-serif;
+  padding-left: 60px;
+  padding-top:20px;
+  background:#FFF;
 }
-.twitter_title h1{
-  background-image: linear-gradient(to right, #0cc0df , #ffde59);
+
+.twitter_title  h1 {
+  background-image: linear-gradient(to right, #0cc0df, #ffde59 50%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.twitter_title  p {
+  padding-left: 20px;
+  font-size: 15px;
   padding-bottom:20px;
-  font-size:50px;
 }
 
-.twitter_title p{
-  font-size:15px;
-  padding-bottom:10px;
-}
 
-/* .twitter_column {
-  display: flex;
-  width: 1100px;
-  height: 500px;
-  margin-left: 20px;
-} */
 
 .twitter_content {
   width: 70%;
@@ -505,21 +511,31 @@
 }
 /*MIKで働く人々*/
 
+
+
 .people_title {
   width: 100%;
-  height: auto;
-  padding-top: 30px;
-  padding-bottom:20px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Zen Maru Gothic", sans-serif;
-}
-.people_title h1 {
+  height: 200px;
 
-  font-size: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 25px;
+  font-family: "Zen Maru Gothic", sans-serif;
+  padding-left: 60px;
+  background:#FFF;
 }
+
+.people_title h1 {
+  background-image: linear-gradient(to right, #0cc0df, #ffde59);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.people_title p {
+  padding-left: 20px;
+  font-size: 15px;
+}
+
 
 .people_frame_wrapper {
   width: 100%;
@@ -685,25 +701,29 @@
   font-family: "Zen Maru Gothic", sans-serif;
 }
 
+
+
 .content_different_title {
   width: 100%;
-  height: auto;
+  height: 200px;
 
-  margin-top: 50px;
-  margin-bottom: 30px;
-
-  padding-left: 65px;
- 
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 25px;
+  font-family: "Zen Maru Gothic", sans-serif;
+  padding-left: 60px;
+  background:#FFF;
 }
 
-.content_different_title h2 {
+.content_different_title h1 {
   background-image: linear-gradient(to right, #0cc0df, #ffde59);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 38px;
+}
+.content_different_title p {
+  padding-left: 20px;
+  font-size: 15px;
 }
 
 .different {
@@ -849,21 +869,31 @@
   font-family: "Zen Maru Gothic", sans-serif;
 }
 
-.content_constitution_title {
+
+.content_constitution_title  {
   width: 100%;
-  padding-top: 30px;
-  padding-left: 30px;
-  margin-bottom: 50px;
+  height: 200px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 25px;
+  font-family: "Zen Maru Gothic", sans-serif;
+  padding-left: 60px;
+  background:#FFF;
 }
 
-.content_constitution h1 {
+.content_constitution_title  h1 {
   background-image: linear-gradient(to right, #0cc0df, #ffde59);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 50px;
-  //margin-top:10px;
-  margin-bottom: 10px;
 }
+.content_constitution_title  p {
+  padding-left: 20px;
+  font-size: 15px;
+}
+
+
 .constitution_suii_frame {
   width: 90%;
   height: auto;
@@ -901,20 +931,31 @@
   margin-bottom:50px;
 }
 
-.flow_title {
+
+
+.flow_title  {
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 30px;
-  padding-left: 50px;
-  height: auto;
+  height: 200px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-size: 25px;
+  font-family: "Zen Maru Gothic", sans-serif;
+  padding-left: 60px;
+  background:#FFF;
+}
+
+.flow_title  h1 {
   background-image: linear-gradient(to right, #0cc0df, #ffde59);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-
-  display: flex;
-  align-items: center;
 }
+.flow_title  p {
+  padding-left: 20px;
+  font-size: 15px;
+}
+
 
 .step_frame {
   width: 800px;
@@ -1090,23 +1131,29 @@
   font-family: "Zen Maru Gothic", sans-serif;
 }
 
-.system_title {
-  width: 100%;
-  height: auto;
 
-  padding-left: 65px;
-  padding-top:30px;
+
+.system_title  {
+  width: 100%;
+  height: 200px;
 
   display: flex;
   flex-direction: column;
-
+  justify-content: center;
+  font-size: 25px;
+  font-family: "Zen Maru Gothic", sans-serif;
+  padding-left: 60px;
+  background:#FFF;
 }
 
-.system_title h1 {
+.system_title  h1 {
   background-image: linear-gradient(to right, #0cc0df, #ffde59 50%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 50px;
+}
+.system_title  p {
+  padding-left: 20px;
+  font-size: 15px;
 }
 
 .system {
