--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1700,21 +1700,26 @@
 
   }
 
-  .contact_title {
-    width: 70%;
-    padding: 30px;
 
+
+  .contact_title {
+    width: 100%;
+    height: 120px;
+  
+    padding-left: 65px;
+  
     display: flex;
     flex-direction:column;
-    justify-content: center;
-    //align-items:center;
-    margin-bottom: 0px;
-  }
-
-  .contact_title h1 {
-    font-size: 40px;
+    align-items: center;
+    padding-top:20px;
     margin-bottom:20px;
   }
+  
+  .contact_title h1 {
+    //color:#C9E265;
+    font-size: 50px;
+  }
+  
 
 
 .content_oubo {
