--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -499,12 +499,13 @@
     flex-direction: column;
     justify-content: center;
     padding-top: 10px;
-    margin-bottom: 20px;
+    margin-top:20px;
+    margin-bottom: 30px;
   }
 
-  .content_different_title h2 {
+  .content_different_title h1 {
     //color: black;
-    font-size: 30px;
+    font-size: 40px;
     background-image: linear-gradient(to right, #0cc0df, #ffde59);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -600,12 +601,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+   margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left:-60px;
   }
 
   .content_constitution_title h1 {
-    font-size: 35px;
+    font-size: 5px;
     background-image: linear-gradient(to right, #0cc0df, #ffde59);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -615,7 +617,7 @@
     background-image: linear-gradient(to right, #0cc0df, #ffde59);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 50px;
+    font-size: 45px;
     //margin-top:10px;
     margin-bottom: 10px;
   }
@@ -680,6 +682,7 @@
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 30px;
+    margin-left:-60px;
   }
 
   .step_frame {
@@ -816,7 +819,7 @@
     align-items: center;
     margin-top: 20px;
 
-    margin-left: -50px;
+    margin-left: -60px;
   }
 
   .system_title h1 {
@@ -905,8 +908,9 @@
     display: flex;
     align-items: center;
     //margin-left: -30px;
-    margin-top: 0px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-left:-60px;
   }
 
   .twitter_title h1{  background-image: linear-gradient(to right, #0cc0df, #ffde59);
@@ -916,7 +920,9 @@
   .twitter_content {
     width: 95%;
     height: auto;
-    border: 5px solid #ddd;
+    border: 8px solid #ddd;
+    border-image: linear-gradient(to right, #0cc0df -20%, #ffde59 150%);
+    border-image-slice: 1;
     border-radius: 10px;
     padding: 10px;
     display: flex;
@@ -924,7 +930,7 @@
     align-items: center;
     justify-content: center;
     //overflow: none;
-    margin-left: 20px;
+    margin-left: 0px;
   }
 
  
