--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1305,6 +1305,10 @@
   border: 0px none;
   border-radius: 10px;
   color:#FFF;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size:16px;
 }
 
 .content_range {
